force-app/main/default/objects/Web_Event__c/Web_Event__c.object-meta.xml
<CustomObject>
    <description>Device-keyed web engagement event (anonymous until stitched to an Account by email).</description>
    <label>Web Event</label>
    <pluralLabel>Web Events</pluralLabel>
    <nameField><label>Web Event #</label><type>AutoNumber</type><displayFormat>WE-{00000000}</displayFormat></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>