force-app/main/default/objects/Web_Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Web Events</relationshipLabel>
    <relationshipName>Web_Events</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>