force-app/main/default/objects/Web_Event__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <description>Which brand storefront the web event came from. A dimension on the unified profile — the person is unified across brands by Identity Resolution; this slices their activity by brand.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Kwitko Coffee</fullName><default>false</default><label>Kwitko Coffee</label></value>
            <value><fullName>Bean &amp; Brew</fullName><default>false</default><label>Bean &amp; Brew</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>