force-app/main/default/objects/Web_Event__c/fields/Cart_Value__c.field-meta.xml
<CustomField>
    <fullName>Cart_Value__c</fullName>
    <label>Cart Value</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>