force-app/main/default/objects/Web_Event__c/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <label>Device Id</label>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
</CustomField>