force-app/main/default/objects/Web_Event__c/fields/Page_Url__c.field-meta.xml
<CustomField>
    <fullName>Page_Url__c</fullName>
    <label>Page Url</label>
    <type>Text</type>
    <length>255</length>
</CustomField>