force-app/main/default/objects/Web_Event__c/fields/Scroll_Pct__c.field-meta.xml
<CustomField>
    <fullName>Scroll_Pct__c</fullName>
    <label>Scroll Percent</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>