force-app/main/default/objects/Web_Event__c/fields/Search_Query__c.field-meta.xml
<CustomField>
    <fullName>Search_Query__c</fullName>
    <label>Search Query</label>
    <type>Text</type>
    <length>255</length>
</CustomField>