force-app/main/default/objects/Web_Event__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <type>Text</type>
    <length>64</length>
</CustomField>