force-app/main/default/objects/Web_Event__c/fields/Time_On_Page__c.field-meta.xml
<CustomField>
    <fullName>Time_On_Page__c</fullName>
    <label>Time On Page (s)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>